退出登录跳转到首页，商品登录和求购ticket提醒文言添加，点击request页面刷新调查

--- a/kankan/pages/main/products/product_want_to_buy.html
+++ b/kankan/pages/main/products/product_want_to_buy.html
@@ -127,6 +127,17 @@ function publishs() {
 					url:"../../login/login.html"
 				});
 			}
+			if(data=="2007"){
+				mui.toast(TextMessage.ticketng, {
+					duration: 'long',
+					type: 'div'
+				});
+				location.reload();
+				mui.openWindow({
+					id: 'point_to_ticket',
+					url:"../sttting/point_to_ticket.html"
+				});
+			}
 			alert("other error code:" + data);
 			
 		}
