--- a/kankan/pages/setting/setting.html
+++ b/kankan/pages/setting/setting.html
@@ -248,10 +248,11 @@
 						duration: 'long',
 						type: 'div'
 					});
-					mui.openWindow({
-						id: 'login',
-						url:"../login/login.html"
-					});
+					mui.back();
+//					mui.openWindow({
+//						id: 'login',
+//						url:"../login/login.html"
+//					});
 				}
 			});
 		});
