--- a/kankan/pages/main/main.html
+++ b/kankan/pages/main/main.html
@@ -65,6 +65,7 @@
 
 			//Create subpage, first tab page display, others are hidden;
 			mui.plusReady(function() {
+				plus.webview.create("products/request.html","request.html");
 				Log.i("main.html plusReady...");
 				var self = plus.webview.currentWebview();
 				for(var i = 0; i < 4; i++) {
@@ -87,6 +88,10 @@
 			//Tab click event
 			mui('.mui-bar-tab').on('tap', 'a', function(e) {
 				var targetTab = this.getAttribute('href');
+				if(targetTab=="products/request.html"){
+					var requestpa = plus.webview.getWebviewById("request.html");
+					mui.fire(requestpa, 'requestRefresh');
+				}
 				if(targetTab == activeTab) {
 					return;
 				}
