页面式样变更，point提现layout做成，页面bug改修

--- a/kankan/pages/main/logisticslist.html
+++ b/kankan/pages/main/logisticslist.html
@@ -152,7 +152,7 @@
 								alert(TextMessage.test);
 								mui.openWindow({
 									id: 'login',
-									url: '../main/login.html'
+									url: '../login/login.html'
 								});
 							}
 						}
@@ -229,7 +229,7 @@
 						alert(TextMessage.test);
 						mui.openWindow({
 							id: 'login',
-							url: '../main/login.html'
+							url: '../login/login.html'
 						});
 					}
 				}
