--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -78,9 +78,9 @@
 				<li class="mui-table-view-cell kankan_det_description" id="share">
 					<span class="lang" data-locale="det_spahare"></span>
 					<img src="../../../images/weixin.png" width="30" height="30">
-					<img src="../../../images/facebook.png" width="40" height="30">
+					<!--<img src="../../../images/facebook.png" width="40" height="30">
 					<img src="../../../images/line.png" width="30" height="30">
-					<img src="../../../images/twitter.png" width="30" height="30">
+					<img src="../../../images/twitter.png" width="30" height="30">-->
 
 				</li>
 			</ul>
