--- a/kankan/pages/main/products/commentlist.html
+++ b/kankan/pages/main/products/commentlist.html
@@ -131,7 +131,7 @@
 						emptycontent();
 						if(data=="2001"){
 							//alert(TextMessage.datanull);
-							$("ul").hide();
+							//$("ul").hide();
 						}
 					}
 				});
