优化主页面list逻辑。

--- a/kankan/pages/login/forget_password.html
+++ b/kankan/pages/login/forget_password.html
@@ -84,6 +84,7 @@
 				$.plusReady(function() {
 					var sendButton = doc.getElementById('sendMail');
 					var emailBox = doc.getElementById('email');
+					emailBox.value = plus.webview.currentWebview().email;
 					sendButton.addEventListener('tap', function() {
 						var waiting = plus.nativeUI.showWaiting();
 						var params = {
