--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -553,7 +553,7 @@
 
 				<div class="logistics">
 					<a>
-						<img src="../../images/car.png" />
+						<img src="../../images/request.png" />
 					</a>
 				</div>
 			</div>
@@ -567,6 +567,9 @@
 		<script type="text/javascript" src="../../js/lazy-load-img.min.js"></script>
 		<script type="text/javascript" src="../../js/common.js"></script>
 		<script>
+			mui.init({
+				swipeBack: false
+			});
 			(function(mui) {
 
 				var search = "";
@@ -581,10 +584,31 @@
 				});
 				mui.ready(function() {
 
+					document.getElementById('slider').addEventListener('slide', function(e) {
+						var sliderItemCount = $('.mui-slider-group .mui-slider-item').length;
+						for(var i = 0; i < sliderItemCount; i++) {
+							if(e.detail.slideNumber === i) {
+								if (DEBUG) {
+									alert("getDataFromServer 2");
+								}
+								getDataFromServer(
+									$('.mui-slider-group .mui-scroll:eq(' + i + ') .mui-table-view')[0],
+									0,
+									6,
+									$($('.mui-slider-group .mui-scroll:eq(' + i + ') .mui-table-view')[0]).parent().attr('data-category-id'),
+									null,
+									null,
+									true,
+									null
+								);
+							}
+						}
+					});
+
 					$(".logistics a").on("tap", function(event) {
 						mui.openWindow({
-							id: "logisticslist",
-							url: "logisticslist.html",
+							id: "request",
+							url: "products/request.html",
 							waiting: {
 								autoShow: false
 							}
@@ -594,6 +618,13 @@
 						if(DEBUG) {
 							alert("search event.");
 						}
+						if (event.detail.keyword === "") {
+							return;
+						}
+						if (DEBUG) {
+							alert("getDataFromServer 3");
+						}
+						
 						getDataFromServer(
 							$('.mui-slider-group .mui-scroll:eq(0) .mui-table-view')[0],
 							0,
@@ -607,10 +638,16 @@
 					});
 
 					window.addEventListener("refresh", function(event) {
+						if (event.detail.refresh != "canRefresh") {
+							return;
+						}
+						if (DEBUG) {
+							alert("getDataFromServer 4");
+						}
 						getDataFromServer(
 							$('.mui-slider-group .mui-scroll:eq(0) .mui-table-view')[0],
 							0,
-							5,
+							6,
 							$($('.mui-slider-group .mui-scroll:eq(0) .mui-table-view')[0]).parent().attr('data-category-id'),
 							null,
 							null,
@@ -653,30 +690,33 @@
 						mui(pullRefreshEl).pullToRefresh({
 							down: {
 								callback: function() {
-									lazyLoadImg.destroy();
+									//lazyLoadImg.destroy();
 									var self = this;
 									setTimeout(function() {
 										var ul = self.element.querySelector('.mui-table-view');
 										var catalog = $(ul).parent().attr("data-category-id");
-										getDataFromServer(ul, index, 5, catalog, null, null, true, self);
+										if (DEBUG) {
+											alert("getDataFromServer 5");
+										}
+										getDataFromServer(ul, index, 6, catalog, null, null, true, self);
 									}, 1000);
 								}
 							},
 							up: {
 								callback: function() {
-									lazyLoadImg.destroy();
+									//lazyLoadImg.destroy();
 									var self = this;
 									setTimeout(function() {
 										var ul = self.element.querySelector('.mui-table-view');
 										var catalog = $(ul).parent().attr("data-category-id");
-										/**
-										if (pageInfo.list * pageInfo.page  >= pageInfo.cnt) {
+										if(pageInfo.list * pageInfo.page >= pageInfo.cnt) {
 											self.endPullUpToRefresh(true);
 										} else {
-											getDataFromServer(ul, index, 5, catalog, null, ++pageInfo.page, false, self);
+											if (DEBUG) {
+												alert("getDataFromServer 6");
+											}
+											getDataFromServer(ul, index, 6, catalog, null, ++pageInfo.page, false, self);
 										}
-										**/
-										getDataFromServer(ul, index, 5, catalog, null, ++pageInfo.page, false, self);
 									}, 1000);
 								}
 							}
@@ -718,7 +758,17 @@
 									}
 								}
 							},
-							error: function() {}
+							error: function() {
+								if(reverse) {
+									if(self != null) {
+										self.endPullDownToRefresh(true);
+									}
+								} else {
+									if(self != null) {
+										self.endPullUpToRefresh(true);
+									}
+								}
+							}
 						});
 					};
 
@@ -785,7 +835,8 @@
 							listItemHTML.append('<div class="li-content">')
 								.append('<div class="comm-item">')
 								.appendFormat('<div class="item-tap mui-col-sm-12 mui-col-xs-12" data-comm-id="{0}">', item.commodity_id)
-								.appendFormat('<img src="../../images/nopic.jpg" data-src="{0}">', item.img_flag)
+								//.appendFormat('<img src="../../images/nopic.jpg" data-src="{0}">', item.img_flag)
+								.appendFormat('<img src="{0}">', item.img_flag)
 								.appendFormat('<span>{0}</span>', item.address)
 								.append('</div>')
 								.append('<div class="item-buttom mui-col-sm-12 mui-col-xs-12">')
@@ -822,7 +873,7 @@
 								self.endPullUpToRefresh();
 							}
 						}
-						lazyLoadImg.start();
+						//lazyLoadImg.start();
 						bindEventOnListViewItem();
 					};
 
@@ -833,11 +884,14 @@
 						});
 
 						getCategory();
-
+							
+						if (DEBUG) {
+							alert("getDataFromServer 1");
+						}
 						getDataFromServer(
 							$('.mui-slider-group .mui-scroll:eq(0) .mui-table-view')[0],
 							0,
-							5,
+							6,
 							$($('.mui-slider-group .mui-scroll:eq(0) .mui-table-view')[0]).parent().attr('data-category-id'),
 							null,
 							null,
