交易页面修改

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -604,7 +604,7 @@
 				}else if(change_name == 'switchex'){
 					mode = 'exchange';
 				}else{
-					mode = 'grait';
+					mode = 'gratis';
 				}
 				var codid = $(".kankan_zanbox").attr("id");
 				var params = {
