添加物流页面到一级页面。

--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -114,7 +114,9 @@
 					beforeback: function() {
 						//var list = plus.webview.getWebviewById('pullrefresh_with_tab');
 						var list = plus.webview.currentWebview().opener();
-						mui.fire(list, 'refresh');
+						mui.fire(list, 'refresh', {
+							refresh: "canRefresh"
+						});
 						return true;
 					}
 				});
