--- a/kankan/pages/main/main.html
+++ b/kankan/pages/main/main.html
@@ -31,7 +31,7 @@
 				<span class="mui-icon mui-icon-compose"></span>
 				<span class="mui-tab-label lang" data-locale="tab_3"></span>
 			</a>
-			<a class="mui-tab-item" href="products/request.html">
+			<a class="mui-tab-item" href="logisticslist.html">
 				<span class="mui-icon mui-icon-eye"></span>
 				<span class="mui-tab-label lang" data-locale="tab_4"></span>
 			</a>
@@ -55,7 +55,7 @@
 				//beforeback: back
 			});
 
-			var subpages = ['home.html', 'products/product_login.html', 'products/product_want_to_buy.html', 'products/request.html'];
+			var subpages = ['home.html', 'products/product_login.html', 'products/product_want_to_buy.html', 'logisticslist.html'];
 			var subpage_style = {
 				top: '0px',
 				bottom: '51px'
