页面bug改修：商品发布，小屏手机确认按扭式样错乱，用户评论页面等其他 页面问题改修

--- a/kankan/pages/main/products/commentlist.html
+++ b/kankan/pages/main/products/commentlist.html
@@ -150,8 +150,8 @@
 				var badcount=datas.user_opinion_l_count;
 				//console.log(goodcount);
 				$("#goodcomment .ka_commentnum").html(goodcount);
-				$("#normalcomment .ka_commentnum").html(goodcount);
-				$("#badcomment .ka_commentnum").html(goodcount);
+				$("#normalcomment .ka_commentnum").html(normalcount);
+				$("#badcomment .ka_commentnum").html(badcount);
 				var comment_detailarr = datas.comment_detail;
 				var commentlength = comment_detailarr.length;
 				//var html="";
