--- a/kankan/pages/setting/point_to_mony.html
+++ b/kankan/pages/setting/point_to_mony.html
@@ -38,13 +38,13 @@
 			        </li>
 			        <li class="mui-table-view-cell">
 			           <div class="mui-input-row">
-			               <label><span class="ka_proinfo lang" data-locale="" >支行</span></label>
+			               <label><span class="ka_proinfo lang" data-locale="" >支行地址</span></label>
 			               <input type="text" placeholder="例） 123 （数字3位）">
 			           </div>
 			        </li>
 			        <li class="mui-table-view-cell">
 			           <div class="mui-input-row">
-			               <label><span class="ka_proinfo lang" data-locale="" >账户号码</span></label>
+			               <label><span class="ka_proinfo lang" data-locale="" >银行卡号</span></label>
 			               <input type="text" placeholder="例） 1234567（数字7位）">
 			           </div>
 			        </li>
@@ -53,14 +53,14 @@
 			   	<ul class="mui-table-view">
 		   	        <li class="mui-table-view-cell">
 		   	             <div class="mui-input-row">
-			               <label><span class="ka_proinfo lang" data-locale="" >账户名义</span></label>
-			               <input type="text" placeholder="账户名义">
+			               <label><span class="ka_proinfo lang" data-locale="" >账户名义（姓）</span></label>
+			               <input type="text" placeholder="姓">
 			           </div>
 		   	        </li>
 		   	        <li class="mui-table-view-cell">
 		   	             <div class="mui-input-row">
-			               <label><span class="ka_proinfo lang" data-locale="" >账户名义</span></label>
-			               <input type="text" placeholder="账户名义">
+			               <label><span class="ka_proinfo lang" data-locale="" >账户名义（名）</span></label>
+			               <input type="text" placeholder="名">
 			           </div>
 		   	        </li>
 		   	    </ul>
