详情页面推荐商品bug改修质问文言更改

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -425,7 +425,7 @@
 					if(vall == 0 || j == recomdlenght - 1) {
 						recomendhtml += '</ul></div>';
 					}
-					if(vall == 0 && j < recomdlenght) {
+					if(vall == 0 && k < recomdlenght) {
 						recomendhtml += '<div class="mui-slider-item sliderimg">';
 						recomendhtml += '<ul class="mui-table-view mui-grid-view">';
 					}
@@ -471,7 +471,7 @@
 					if(vallm == 0 || l == concernlenght - 1) {
 						concernhtml += '</ul></div>';
 					}
-					if(vallm == 0 && l < concernlenght) {
+					if(vallm == 0 && m < concernlenght) {
 						concernhtml += '<div class="mui-slider-item sliderimg">';
 						concernhtml += '<ul class="mui-table-view mui-grid-view">';
 					}
