--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -65,8 +65,10 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
+			<!--
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
 			<a class="lang" data-locale="back"></a>
+			-->
 			<h1 class="mui-title"><span class="lang" data-locale="login"></span></h1>
 		</header>
 		<div class="mui-content">
@@ -75,7 +77,7 @@
 					<div class="oauth-btn">
 						<div class="app-icons"><img src="../../images/weixin.png" /></div>
 						<div class="app-msg"><span class="lang" data-locale="wechat_login"></span></div>
-						<a class="mui-navigate-right"></a>
+						<!--<a class="mui-navigate-right"></a>-->
 					</div>
 				</li>
 				<li>
@@ -167,12 +169,26 @@
 												plus.storage.setItem('LoginFlag', 'isLogin');
 												setTimeout(function() {
 													waiting.close();
-													plus.webview.currentWebview().close();
+													mui.back();
 												}, 500);
 											});
 										},
 										ng: function(data) {
 											waiting.close();
+											if(data === "3020") {
+												plus.nativeUI.alert(TextMessage.input_email, function(event) {
+													mui.openWindow({
+														id: "reg",
+														url: "reg.html",
+														waiting: {
+															autoShow: false
+														},
+														show: {
+															duration: 200
+														}
+													});
+												}, TextMessage.sharetitle, TextMessage.yes);
+											}
 										},
 										error: function() {
 											waiting.close();
@@ -222,7 +238,7 @@
 										type: 'div'
 									})
 								}
-								if (data == "2002") {
+								if(data == "2002") {
 									mui.toast(TextMessage.userng, {
 										duration: 'long',
 										type: 'div'
