--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -110,7 +110,7 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
 			<a class="lang" data-locale="back"></a>
 			<h1 class="mui-title"><span class="lang" data-locale="user-login"></span></h1>
-			<a class="mui-icon mui-icon-closeempty mui-pull-right"></a>
+			<!--<a class="mui-icon mui-icon-closeempty mui-pull-right"></a>-->
 		</header>
 		<div class="mui-content">
 			<div id="avatar">
