交易履历跳转修改

--- a/kankan/pages/main/products/requestlist.html
+++ b/kankan/pages/main/products/requestlist.html
@@ -28,8 +28,8 @@
 			mui.init({
 				swipeBack: false,
 				preloadPages: [{
-						id:"translatelist",
-						url:"translatelist.html"
+						id:"transaction",
+						url:"../../transaction/transaction2.html"
 				}]
 			});
 			function showhistory(results){
