--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -262,7 +262,7 @@
 					buyer_msg += '</a>';
 					buyer_msg += '<input type="hidden" name="buyer_commodity_id" value="' + buyer_comm_id + '">';
 					buyer_msg += '<input type="hidden" name="buyer_user_id" value="' + buyer_id + '">';
-					$(".cur-user").append("<input type='hidden' name='myid' id='myid' value='" + cur_user_id + "'>");
+					
 					if(buyer_flag) {
 						$(".cur-user").html(buyer_msg);
 						$(".request-user").html(seller_msg);
@@ -270,6 +270,7 @@
 						$(".request-user").html(buyer_msg);
 						$(".cur-user").html(seller_msg);
 					}
+					$(".cur-user").append("<input type='hidden' name='myid' id='myid' value='" + cur_user_id + "'>");
 				} else {
 					seller_msg += '<a href="#">';
 					seller_msg += '<div class="mui-media-body" style="height:35px;margin-top:0px;">';
@@ -284,14 +285,17 @@
 			}
 
 			function goods_detail() {
-				var cur_user_id = $("#myid").val();
-				alert(cur_user_id);
+				
 			}
 
 			function show_request_comm() {
 
 			}
-
+			
+			mui(".exchange").on('tap', '.cur-user', function() {
+				var cur_user_id = $("#myid").val();
+				alert(cur_user_id);
+			})
 			function showChatMsg(usersinfo, messginfo, cur_user_id) {
 				var buyer_photo, buyer_nickname, buyer_id, seller_photo, seller_nickname, seller_id, chatMsg;
 				for(var user in usersinfo) {
@@ -323,13 +327,13 @@
 					} else {
 						if(messginfo[chat].user_id == seller_id) {
 							chatMsg += '<div class="comtent mui-pull-left">';
-							chatMsg += '<div class="mui-pull-left"><img src="' + seller_photo + '" width="40" height="40" class="ka_touxiangimg"></div>';
-							chatMsg += '<div class="mui-pull-left ka_commentinfobox">' + messginfo[chat].msg_detail + '</div>';
+							chatMsg += '<div class="mui-pull-right"><img src="' + seller_photo + '" width="40" height="40" class="ka_touxiangimg"></div>';
+							chatMsg += '<div class="mui-pull-right ka_commentinfobox">' + messginfo[chat].msg_detail + '</div>';
 							chatMsg += '</div>';
 						} else {
 							chatMsg += '<div class="comtent mui-pull-left">';
-							chatMsg += '<div class="mui-pull-right"><img src="' + buyer_photo + '" width="40" height="40" class="ka_touxiangimg"></div>';
-							chatMsg += '<div class="mui-pull-right ka_commentinfobox">' + messginfo[chat].msg_detail + '</div>';
+							chatMsg += '<div class="mui-pull-left"><img src="' + buyer_photo + '" width="40" height="40" class="ka_touxiangimg"></div>';
+							chatMsg += '<div class="mui-pull-left ka_commentinfobox">' + messginfo[chat].msg_detail + '</div>';
 							chatMsg += '</div>';
 						}
 					}
@@ -393,6 +397,7 @@
 					}
 				}
 			}
+			
 			mui(".tran-button-buy").on('tap', 'div', function() {
 				var params = {
 					"transid": trans_id
@@ -644,6 +649,16 @@
 						}
 					}
 				});
+			}
+
+			function err_callback(data) {
+				Log.i("message send faild!");
+				if(data == "1000") {
+					alert(TextMessage.test);
+				}
+				if(data == "2004") {
+					alert(TextMessage.operation_error);
+				}
 			}
 		</script>
 	</body>
